# workshop-1-social-automation

./: .gitignore  README.md  __init__.py  config.py  image_generation.py  knowledge_base.db  main.py  mastodon_posting.py  notion.py  openrouter.py  pipeline.py  pyproject.toml  rag.py  rag_knowledgebase.py  requirements.txt  telegram_hitl.py  test_telegram_hitl.py  vercel.json
api/: index.py
tests/: test_local.py  test_mastodon.py  test_notion.py  test_openrouter.py
